listas get y delete retrofit y viewmodel

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,10 +19,5 @@
         android:id="@+id/ShoppingListFragment"
         android:name="com.example.tabajo_finalt3.ui.fragment.ShoppingListFragment"
         android:label="Shopping list"
-        tools:layout="@layout/fragment_shopping_list">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/HomeFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_shopping_list"/>
 </navigation>
