--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple">#B3A8F3</color>
     <color name="darkPurple">#725DEC</color>
     <color name="blue">#231847</color>
-    <color name="yellow">#FCF8D0</color>
+    <color name="yellow">#FAF6D5</color>
     <color name="green">#2BCB8A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
