--- a/app/src/main/res/layout/fragment_detail_recipe.xml
+++ b/app/src/main/res/layout/fragment_detail_recipe.xml
@@ -18,12 +18,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvNombreReceta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:text="Receta"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
@@ -33,6 +33,7 @@
         android:id="@+id/tvTingredientes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Ingredientes"
         android:textColor="#231847"
         android:textSize="20sp"
@@ -40,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="255dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
         android:id="@+id/tvTpasos"
@@ -54,4 +55,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvTingredientes"
         app:layout_constraintTop_toTopOf="@+id/tvTingredientes" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="130dp"
+        android:layout_height="132dp"
+        android:layout_marginTop="616dp"
+        android:layout_marginEnd="304dp"
+        android:alpha="0.4"
+        android:foreground="@drawable/blur_effect"
+        android:src="@drawable/foodies___veggie_recipe"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="109dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="328dp"
+        android:alpha="0.4"
+        android:foreground="@drawable/blur_effect"
+        android:src="@drawable/foodies___chef_top_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
