--- a/app/src/main/res/layout/holder_ingredients.xml
+++ b/app/src/main/res/layout/holder_ingredients.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="63dp"
+        android:layout_height="47dp"
+        android:alpha="0.3"
+        app:srcCompat="@drawable/hands___apple"
+        tools:layout_editor_absoluteX="71dp"
+        tools:layout_editor_absoluteY="82dp" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="53dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginBottom="100dp"
+        android:alpha="0.3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/fitz___avocado" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="143dp"
+        android:layout_height="159dp"
+        android:alpha="0.1"
+        app:srcCompat="@drawable/the_munchies___bowl"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="256dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="352dp"
+        android:layout_height="653dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
