--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,21 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/HomeFragment">
+    app:startDestination="@id/ShoppingListFragment">
 
-    <fragment
-        android:id="@+id/HomeFragment"
-        android:name="com.example.tabajo_finalt3.ui.fragment.HomeFragment"
-        android:label="HOME"
-        tools:layout="@layout/fragment_home">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/ShoppingListFragment" />
-    </fragment>
     <fragment
         android:id="@+id/ShoppingListFragment"
-        android:name="com.example.tabajo_finalt3.ui.fragment.ShoppingListFragment"
+        android:name="com.example.trabajo_finalt3.ui.fragment.ShoppingListFragment"
         android:label="Shopping list"
         tools:layout="@layout/fragment_shopping_list"/>
 </navigation>
