layout lista recetas y post

--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ShoppingListFragment">
+    tools:context="ui.fragment.ShoppingListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarShoppingList"
