--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ToolbarColoredBackArrow" parent="Base.Theme.Tabajo_finalT3">
+    <style name="ToolbarColoredBackArrow" parent="Base.Theme.Trabajo_finalT3">
         <item name="android:textColorSecondary">@color/yellow</item>
         <item name="android:statusBarColor">@color/green</item>
     </style>
