--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/HomeFragment"
-        android:name="com.example.tabajo_finalt3.ui.HomeFragment"
+        android:name="com.example.trabajo_finalt3.ui.HomeFragment"
         android:label="HOME"
         tools:layout="@layout/fragment_home">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/ShoppingListFragment"
-        android:name="com.example.tabajo_finalt3.ui.ShoppingListFragment"
+        android:name="com.example.trabajo_finalt3.ui.ShoppingListFragment"
         android:label="Shopping list"
         tools:layout="@layout/fragment_shopping_list">
 
