--- a/app/src/main/res/layout/fragmentceldareceta.xml
+++ b/app/src/main/res/layout/fragmentceldareceta.xml
@@ -26,6 +26,8 @@
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:text="TextView"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
