--- a/app/src/main/res/layout/fragmentceldareceta.xml
+++ b/app/src/main/res/layout/fragmentceldareceta.xml
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#A15FDD48"
+        android:fontFamily="@font/indie_flower"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
