--- a/app/src/main/res/layout/holder_item.xml
+++ b/app/src/main/res/layout/holder_item.xml
@@ -10,11 +10,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/lexend_light"
+        android:fontFamily="@font/indie_flower"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:text="Item"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
