--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
+        <item>@font/indie_flower</item>
         <item>@font/lexend_bold</item>
         <item>@font/lexend_light</item>
         <item>@font/lexend_semibold</item>
