--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/HomeFragment"
+        android:icon="@drawable/button_home"
+        android:title="Home"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/ShoppingListFragment"
         android:icon="@drawable/button_list"
         android:title="List"
