--- a/app/src/main/res/layout/fragment_listado.xml
+++ b/app/src/main/res/layout/fragment_listado.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.FirstFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="0dp"
@@ -15,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -24,23 +35,4 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <ImageView
-        android:id="@+id/arrowLeft"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@drawable/baseline_arrow_circle_left_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:tint="#2A7ABA"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/arrowRight"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@drawable/baseline_arrow_circle_right_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:tint="#2A7ABA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
