--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/ShoppingListFragment" />
+        <action
+            android:id="@+id/action_HomeFragment_to_firstFragment"
+            app:destination="@id/firstFragment" />
     </fragment>
     <fragment
         android:id="@+id/ShoppingListFragment"
@@ -25,4 +28,9 @@
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/HomeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/firstFragment"
+        android:name="com.example.tabajo_finalt3.ui.fragment.FirstFragment"
+        android:label="fragment_listado"
+        tools:layout="@layout/fragment_listado" />
 </navigation>
