--- a/app/src/main/res/layout/modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/modal_bottom_sheet.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:textColorHint="#2BCB8A"
+        app:boxStrokeColor="#2BCB8A"
         app:hintTextColor="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
