--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/HomeFragment"
-        android:name="com.example.trabajo_finalt3.ui.HomeFragment"
+        android:name="com.example.trabajo_finalt3.ui.fragments.HomeFragment"
         android:label="HOME"
         tools:layout="@layout/fragment_home">
 
